; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kdebug_trigger.c_kperf_kdebug_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_kdebug_trigger.c_kperf_kdebug_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_KERN_MEMORY_DIAG = common dso_local global i32 0, align 4
@kperf_kdebug_filter = common dso_local global i32* null, align 8
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kperf_kdebug_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @VM_KERN_MEMORY_DIAG, align 4
  %3 = call i32* @kalloc_tag(i32 4, i32 %2)
  store i32* %3, i32** @kperf_kdebug_filter, align 8
  %4 = load i32*, i32** @kperf_kdebug_filter, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @ENOMEM, align 4
  store i32 %7, i32* %1, align 4
  br label %11

8:                                                ; preds = %0
  %9 = load i32*, i32** @kperf_kdebug_filter, align 8
  %10 = call i32 @bzero(i32* %9, i32 4)
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %8, %6
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32* @kalloc_tag(i32, i32) #1

declare dso_local i32 @bzero(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
